# Obsidian-sync-server

./: .gitignore  CMakeLists.txt  ClientFile.cpp  ClientFile.h  Server.cpp  Server.h  ServerFile.cpp  ServerFile.h  SyncFileReader.cpp  SyncFileReader.h  main.cpp
templates/: main.html
